--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -20,15 +20,6 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - name: Install cockroach binary
-        run: curl https://binaries.cockroachdb.com/cockroach-v23.1.23.linux-amd64.tgz | tar -xz && sudo cp -i cockroach-v23.1.23.linux-amd64/cockroach /usr/local/bin/
-
-      - name: Start test database
-        run: cockroach start-single-node --insecure --background
-
-      - name: Create test DB
-        run: make test-database
-
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
@@ -36,11 +27,23 @@ jobs:
           args: --timeout=5m
           skip-cache: true
 
+      - name: Install psql client library
+        run: |
+          sudo apt install -y postgresql-common && \
+          sudo YES=yes /usr/share/postgresql-common/pgdg/apt.postgresql.org.sh -i -v 17 && \
+          sudo apt install -y postgresql-client-17
+
+      - name: Setup test DB
+        run: make test-database
+
       - name: Run go tests and generate coverage report
-        run: FLEETDB_CRDB_URI="host=localhost port=26257 user=root sslmode=disable dbname=fleetdb_test" go test -race -coverprofile=coverage.txt -covermode=atomic -tags testtools -p 1 ./...
+        run: |
+          docker ps -a
+          make test
 
       - name: Stop test database
-        run: cockroach node drain --insecure --host=localhost:26257
+        if: always()
+        run: make test-database-down
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v4
