--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,64 +2,95 @@ run:
   build-tags:
     - testtools
 
+    # golangci.com configuration
+# https://github.com/golangci/golangci/wiki/Configuration
+service:
+  golangci-lint-version: v1.62.0 # pin version to not introduce new linters unexpectedly
+
 linters-settings:
+  govet:
+    auto-fix: true
+    enable-all: true
+    disable:
+      fieldalignment
+  revive:
+    min-confidence: 0
+  gocyclo:
+    min-complexity: 15
+  dupl:
+    threshold: 100
+  goconst:
+    min-len: 2
+    min-occurrences: 2
+  depguard:
+    list-type: blacklist
+  misspell:
+    locale: US
+    auto-fix: true
+  lll:
+    line-length: 140
   goimports:
-    local-prefixes: github.com/metal-automata/fleetdb
+    local-prefixes: github.com/golangci/golangci-lint
+  gocritic:
+    enabled-tags:
+      - performance
+      - style
+      - experimental
+    disabled-checks:
+      - wrapperFunc
+      - hugeParam
   gofumpt:
     extra-rules: true
-  stylecheck:
-    checks: ["all", "-ST1000"]
+  whitespace:
+    auto-fix: true
 
 linters:
   enable:
-    # default linters
     - errcheck
     - gosimple
     - govet
+    - gofmt
+    - gocyclo
     - ineffassign
+    - stylecheck
+    - misspell
     - staticcheck
-    - typecheck
     - unused
-
+    - prealloc
+    - typecheck
     # additional linters
     - bodyclose
     - gocritic
-    - gocyclo
     - err113
-    - gofmt
-    # - gofumpt
     - goimports
-    - mnd
-    - govet
+    - revive
     - misspell
     - noctx
-    #    - revive XXX: fix up old code caught here
     - stylecheck
+    - gosec
+    - contextcheck
+    - durationcheck
+    - errchkjson
+    - errorlint
+    - gochecksumtype
+    - nilerr
+    - reassign
     - whitespace
+  enable-all: false
+  disable-all: true
 
 issues:
-  exclude:
-    # Default excludes from `golangci-lint run --help` with EXC0002 removed
-    # EXC0001 errcheck: Almost all programs ignore errors on these functions and in most cases it's ok
-    - Error return value of .((os\.)?std(out|err)\..*|.*Close|.*Flush|os\.Remove(All)?|.*print(f|ln)?|os\.(Un)?Setenv). is not checked
-    # EXC0002 golint: Annoying issue about not having a comment. The rare codebase has such comments
-    # - (comment on exported (method|function|type|const)|should have( a package)? comment|comment should be of the form)
-    # EXC0003 golint: False positive when tests are defined in package 'test'
-    - func name will be used as test\.Test.* by other packages, and that stutters; consider calling this
-    # EXC0004 govet: Common false positives
-    - (possible misuse of unsafe.Pointer|should have signature)
-    # EXC0005 staticcheck: Developers tend to write in C-style with an explicit 'break' in a 'switch', so it's ok to ignore
-    - ineffective break statement. Did you mean to break out of the outer loop
-    # EXC0006 gosec: Too many false-positives on 'unsafe' usage
-    - Use of unsafe calls should be audited
-    # EXC0007 gosec: Too many false-positives for parametrized shell calls
-    - Subprocess launch(ed with variable|ing should be audited)
-    # EXC0008 gosec: Duplicated errcheck checks
-    - (G104|G307)
-    # EXC0009 gosec: Too many issues in popular repos
-    - (Expect directory permissions to be 0750 or less|Expect file permissions to be 0600 or less)
-    # EXC0010 gosec: False positive is triggered by 'src, err := ioutil.ReadFile(filename)'
-    - Potential file inclusion via variable
-  exclude-use-default: false
   exclude-files:
-    - ".*_test.go"
+    - "(.*/)*.*_test.go"
+    - "fixtures.go"
+    - "/pkg/api/v1/fixtures/*.go"
+
+  exclude-rules:
+    - linters:
+        - gosec
+      text: "weak cryptographic primitive"
+
+    - linters:
+        - stylecheck
+      text: "ST1016"
+exclude-use-default: false
